--- a/index.html
+++ b/index.html
@@ -2347,7 +2347,8 @@
 	</div><!--bodywrapper-->
 	
 	<script src="main.js"></script>
-	<script src="lz-string.js"></script>
+	<script src="features.js" defer></script>
+	<script src="lz-string.js" defer></script>
 
 
 	<script>init();</script>
@@ -2525,8 +2526,8 @@ document.addEventListener('scroll', (event) => {
 
 	</script>
 	<!-- chart.js from https://cdnjs.com/libraries/Chart.js-->
-	<script src="chart.min.js"></script>
-	<script src="chartjs-plugin-crosshair.min.js"></script>
+	<script src="chart.min.js" defer></script>
+	<script src="chartjs-plugin-crosshair.min.js" defer></script>
 	<script>
 
 	</script>
