--- a/manual.html
+++ b/manual.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- VERSION 2.0 -->
-<html lang="en">
+<html lang="en" style="background:#222">
 <head>
 	<link rel="stylesheet" href="styles.css">
 	<link href="css/fontawesome.min.css" rel="stylesheet"> 
@@ -27,7 +27,7 @@
     <title>SimTIVA Manual</title>
 <script defer src="https://cloud.umami.is/script.js" data-website-id="fe14ba98-f4c0-4536-94fa-9a0a4c1ed75e"></script> 
 </head>
-<body>
+<body style="">
 	<div id="menu2">
 						<div class="languagebutton" style="position:fixed;bottom:60px;left:calc(50% - 65px)" onclick="displayLanguagePanel();">
 							<span><i class="fas fa-globe"></i></span>
