--- a/view.html
+++ b/view.html
@@ -1486,6 +1486,7 @@ document.addEventListener('scroll', (event) => {
 }, false)
 
 	</script>
+	<script src="features.js"></script>
 	<!-- chart.js from https://cdnjs.com/libraries/Chart.js-->
 	<script src="chart.min.js"></script>
 	<script src="chartjs-plugin-crosshair.min.js"></script>
