further reduce file size of essential
essential files reduction

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 	<!--<link rel="stylesheet" href="Chart.css" />-->
 	<link rel="stylesheet" href="styles.css">
 	<link href="css/fontawesome.min.css" rel="stylesheet"> 
-	<link href="css/regular.min.css" rel="stylesheet"> 
 	<link href="css/solid.min.css" rel="stylesheet">
-	<link href="css/brands.min.css" rel="stylesheet"> <!--font awesome-->
+	<link rel="preload" href="css/regular.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'"> 
+	<!--<link href="css/brands.min.css" rel="stylesheet">--> <!--font awesome - can hide this-->
 	<meta name="theme-color" content="#7B8092">
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 	<link rel="apple-touch-icon" href="apple-touch-icon.png" />
