--- a/index.html
+++ b/index.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
-	<!--<link rel="stylesheet" href="Chart.css" />-->
 	<link rel="stylesheet" href="styles.css">
-	<link href="css/fontawesome.min.css" rel="stylesheet"> 
-	<link href="css/solid.min.css" rel="stylesheet">
+	<link rel="preload" href="css/fontawesome.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'"> 
+	<link rel="preload" href="css/solid.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
 	<link rel="preload" href="css/regular.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'"> 
-	<!--<link href="css/brands.min.css" rel="stylesheet">--> <!--font awesome - can hide this-->
 	<meta name="theme-color" content="#7B8092">
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 	<link rel="apple-touch-icon" href="apple-touch-icon.png" />
@@ -63,9 +60,15 @@
 </head>
 <body class="" id="windowbody">
 		<div id="rescuebuttons">
-			<a class="button frontpage"  onclick="displayModalOptions();"><i class="fas fa-cog fa-fw" style="padding-right: 6px"></i>Options</a>
-			<a class="button frontpage"  onclick="rescue();"><i class="fas fa-life-ring fa-fw " style="padding-right:6px"></i>Rescue</a>
-			<a class="button frontpage"  onclick="load();"><i class="fas fa-save fa-fw " style="padding-right:6px"></i>Load file</a>
+			<a class="button frontpage"  onclick="displayModalOptions();">
+			<svg viewBox="0 0 512 512" class="iconsvg gear"><path d="M495.9 166.6c3.2 8.7 .5 18.4-6.4 24.6l-43.3 39.4c1.1 8.3 1.7 16.8 1.7 25.4s-.6 17.1-1.7 25.4l43.3 39.4c6.9 6.2 9.6 15.9 6.4 24.6c-4.4 11.9-9.7 23.3-15.8 34.3l-4.7 8.1c-6.6 11-14 21.4-22.1 31.2c-5.9 7.2-15.7 9.6-24.5 6.8l-55.7-17.7c-13.4 10.3-28.2 18.9-44 25.4l-12.5 57.1c-2 9.1-9 16.3-18.2 17.8c-13.8 2.3-28 3.5-42.5 3.5s-28.7-1.2-42.5-3.5c-9.2-1.5-16.2-8.7-18.2-17.8l-12.5-57.1c-15.8-6.5-30.6-15.1-44-25.4L83.1 425.9c-8.8 2.8-18.6 .3-24.5-6.8c-8.1-9.8-15.5-20.2-22.1-31.2l-4.7-8.1c-6.1-11-11.4-22.4-15.8-34.3c-3.2-8.7-.5-18.4 6.4-24.6l43.3-39.4C64.6 273.1 64 264.6 64 256s.6-17.1 1.7-25.4L22.4 191.2c-6.9-6.2-9.6-15.9-6.4-24.6c4.4-11.9 9.7-23.3 15.8-34.3l4.7-8.1c6.6-11 14-21.4 22.1-31.2c5.9-7.2 15.7-9.6 24.5-6.8l55.7 17.7c13.4-10.3 28.2-18.9 44-25.4l12.5-57.1c2-9.1 9-16.3 18.2-17.8C227.3 1.2 241.5 0 256 0s28.7 1.2 42.5 3.5c9.2 1.5 16.2 8.7 18.2 17.8l12.5 57.1c15.8 6.5 30.6 15.1 44 25.4l55.7-17.7c8.8-2.8 18.6-.3 24.5 6.8c8.1 9.8 15.5 20.2 22.1 31.2l4.7 8.1c6.1 11 11.4 22.4 15.8 34.3zM256 336a80 80 0 1 0 0-160 80 80 0 1 0 0 160z"/></svg>
+			Options</a>
+			<a class="button frontpage"  onclick="rescue();">
+			<svg class="iconsvg life-ring" viewBox="0 0 512 512"><path d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm173.7 119.6l-63.4 63.4c-11-18.6-26.7-34.3-45.3-45.3l63.4-63.4a218.4 218.4 0 0 1 45.3 45.3zM256 352c-53 0-96-43-96-96s43-96 96-96 96 43 96 96-43 96-96 96zM127.6 82.3l63.4 63.4c-18.6 11-34.3 26.7-45.3 45.3l-63.4-63.4a218.4 218.4 0 0 1 45.3-45.3zM82.3 384.4l63.4-63.4c11 18.6 26.7 34.3 45.3 45.3l-63.4 63.4a218.4 218.4 0 0 1 -45.3-45.3zm302.1 45.3l-63.4-63.4c18.6-11 34.3-26.7 45.3-45.3l63.4 63.4a218.4 218.4 0 0 1 -45.3 45.3z"/></svg>
+			Rescue</a>
+			<a class="button frontpage"  onclick="load();">
+			<svg class="iconsvg save" viewBox="0 0 448 512"><path d="M433.9 129.9l-83.9-83.9A48 48 0 0 0 316.1 32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V163.9a48 48 0 0 0 -14.1-33.9zM224 416c-35.3 0-64-28.7-64-64 0-35.3 28.7-64 64-64s64 28.7 64 64c0 35.3-28.7 64-64 64zm96-304.5V212c0 6.6-5.4 12-12 12H76c-6.6 0-12-5.4-12-12V108c0-6.6 5.4-12 12-12h228.5c3.2 0 6.2 1.3 8.5 3.5l3.5 3.5A12 12 0 0 1 320 111.5z"/></svg>
+			Load file</a>
 		</div>
 		<div id="modalAbout" class="modal">
 			<div class="modal-content" id="modalAboutcontent">
@@ -291,7 +294,9 @@
 					<div>
 						<a class="button invert disabled" id="btn_initProceed">Proceed</a>
 						<a class="button muted right" id="btn_disclaimer" onclick="displayDisclaimer();">Disclaimer</a>
-						<a class="button muted right" id="btn_about" onclick="displayAbout2();"><span style="padding-right: 6px"><i class="fas fa-question-circle"></i></span>Help</a>
+						<a class="button muted right" id="btn_about" onclick="displayAbout2();">
+							<svg class="iconsvg question-circle" viewBox="0 0 512 512"><path d="M504 256c0 137-111 248-248 248S8 393 8 256C8 119.1 119 8 256 8s248 111.1 248 248zM262.7 90c-54.5 0-89.3 23-116.5 63.8-3.5 5.3-2.4 12.4 2.7 16.3l34.7 26.3c5.2 3.9 12.6 3 16.7-2.1 17.9-22.7 30.1-35.8 57.3-35.8 20.4 0 45.7 13.1 45.7 33 0 15-12.4 22.7-32.5 34C247.1 238.5 216 254.9 216 296v4c0 6.6 5.4 12 12 12h56c6.6 0 12-5.4 12-12v-1.3c0-28.5 83.2-29.6 83.2-106.7 0-58-60.2-102-116.5-102zM256 338c-25.4 0-46 20.6-46 46 0 25.4 20.6 46 46 46s46-20.6 46-46c0-25.4-20.6-46-46-46z"/></svg>
+						Help</a>
 					</div>
 
 			</div>
