--- a/manual.html
+++ b/manual.html
@@ -3,6 +3,7 @@
 <html lang="en" style="background:#222">
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<link rel="stylesheet" href="styles-manual.css">
 	<link href="css/fontawesome.min.css" rel="stylesheet"> 
 	<link href="css/regular.min.css" rel="stylesheet"> 
 	<link href="css/solid.min.css" rel="stylesheet">
