--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<link rel="preload" href="styles-extra.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
 	<link rel="preload" href="css/fontawesome.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'"> 
 	<link rel="preload" href="css/solid.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
 	<link rel="preload" href="css/regular.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'"> 
@@ -498,10 +499,6 @@
 				</div>
 			</div>
 		</div>
-
-
-
-
 
 		<div id="modalLoad" class="modal">
 			<div class="modal-content" id="modalLoadcontent">
@@ -2319,35 +2316,6 @@
 				<li><a href="https://simtiva.blogspot.com/p/feedback.html" target="_blank">Contact</a></li>
 			</ul>
 		</div>
-		<!--
-		<div class="ticker" id="ticker">
-				<div id="progressoutside">
-					<div id="progressbar">
-						<div id="progressinside"></div>
-					</div>
-				</div>
-				<div class="tickerleft" id="tickerleft">
-					<div class="A1">
-							<div class="A2">Next bolus:</div>
-							<div class="A3"><span id="PP_bolus_display"></span>mg</div>
-					</div>
-					<div class="B1">
-						<div class="B2">in</div>
-						<div class="B3"><span id="PP_time_display">_</span></div>
-					</div>
-				</div>
-				<div class="tickerright">
-					<div class="A1">
-							<div class="A2">Last bolus: </div>
-						<div class="A3"><span id="PP_lastbolus_display"></span>mg</div>
-					</div>
-					<div class="B1">
-						<div class="B2">at</div>
-						<div class="B3"><span id="PP_lasttime_display">_</span></div>
-					</div>		
-				</div>
-		</div>
-		-->
 	
 	</div><!--bodywrapper-->
 	
