--- a/index.html
+++ b/index.html
@@ -1323,6 +1323,7 @@
 	</div><!--bodywrapper-->
 	
 	<script src="main.js"></script>
+	<script src="index.js" defer></script>
 	<script src="features.js" defer></script>
 	<script src="lz-string.js" defer></script>
 
