--- a/view.html
+++ b/view.html
@@ -1486,7 +1486,9 @@ document.addEventListener('scroll', (event) => {
 }, false)
 
 	</script>
-	<script src="features.js"></script>
+	<script src="index.js" defer></script>
+	<script src="pharmacology.js" defer></script>
+	<script src="features.js" defer></script>
 	<!-- chart.js from https://cdnjs.com/libraries/Chart.js-->
 	<script src="chart.min.js"></script>
 	<script src="chartjs-plugin-crosshair.min.js"></script>
