--- a/index.html
+++ b/index.html
@@ -472,56 +472,11 @@
 			</div>
 		</div>
 		<!-- start non-essential modals -->
-		<div id="componentsModals">
-
+		<div id="xModals">
 		</div><!--end non-essential modals-->
-		<!--endmodal-->
-
-  <!-- start leftbar-->
-  <div class="leftbar propofol hide">
-  	<div class="ptolcontainer">
-  		<div id="">&nbsp;
-  		</div>
-  	</div>
-  	<div class="leftbarlabel">
-  		<div class="druglabelcontainer propofol active" onclick="tabswitch(0);">
-  			<div class="druglabelicon alert hide"><i class="fas fa-bell"></i></div>
-  			<div class="druglabelicon propofol">
-  				P
-  			</div>
-  			<div class="druglabeltext propofol active">
-  				<div class="line1">PROPOFOL</div>
-  				<div class="line2 hide">
-  					<div class="line2text"><i class="fas fa-tint fa-fw"></i>&nbsp;<span id="cp_propo"></span>&nbsp;&nbsp;</div>
-  					<div class="line2text"><i class="fas fa-brain fa-fw"></i>&nbsp;<span id="ce_propo"></span>&nbsp;&nbsp;</div>
-  					<div class="line2text"><i class="fas fa-running fa-fw"></i>&nbsp;<span id="inf_propo"></span></div>
-  				</div>
-  			</div>
-  		</div>
-  	</div>
-  	<div class="spacer">
-  	</div>
-  	<div class="leftbarlabel">
-  		<div class="druglabelcontainer opioid " onclick="tabswitch(1);">
-  			<div class="druglabelicon alert hide"><i class="fas fa-bell"></i></div>
-  			<div class="druglabelicon opioid">
-  				R
-  			</div>
-  			<div class="druglabeltext opioid ">
-  				<div class="line1">REMIFENTANIL</div>
-  				<div class="line2 hide">
-  					<div class="line2text"><i class="fas fa-tint fa-fw"></i>&nbsp;<span id="cp_opioid"></span>&nbsp;&nbsp;</div>
-  					<div class="line2text"><i class="fas fa-brain fa-fw"></i>&nbsp;<span id="ce_opioid"></span>&nbsp;&nbsp;</div>
-  					<div class="line2text"><i class="fas fa-running fa-fw"></i>&nbsp;<span id="inf_opioid"></span></div>
-  				</div>
-  			</div>
-
-  		</div>
-  	</div>
-  </div>
-  <!-- end leftbar-->
-
-	<div id="parallax3"></div>
+		<!--endmodal--><!-- 
+		start leftbar--><div id="xLeftbar"></div><!-- end leftbar
+		--><div id="parallax3"></div>
     <div class="menuwrapper" id="menu">
         <div class="menucontent">
             <!--<a href="#" 
@@ -1138,7 +1093,7 @@
 		</div>
 		<div id="eventscontainer" style="display:block">
 		</div>
-		<div id="componentsCards"><!-- start of non-essnetial cards-->
+		<div id="xCards"><!-- start of non-essnetial cards-->
 		</div><!-- end of non-essential cards section-->
 		<div class="card" id="card_options">
 			<div class="cardtitle">OPTIONS</div>
