update view and css
update view to support progressive enhancement/breakup code
update CSS to progress bar (IB), events font size

--- a/view.html
+++ b/view.html
@@ -5,6 +5,7 @@
 
 	<!--<link rel="stylesheet" href="Chart.css" />-->
 	<link rel="stylesheet" href="styles.css">
+	<link rel="stylesheet" href="styles-extra.css">
 	<link href="css/fontawesome.min.css" rel="stylesheet"> 
 	<link href="css/regular.min.css" rel="stylesheet"> 
 	<link href="css/solid.min.css" rel="stylesheet"> <!--font awesome-->
@@ -1495,6 +1496,6 @@ document.addEventListener('scroll', (event) => {
 	<script>
 
 	</script>
-	<script>setTimeout(function() {loadoptions();createCharts();parseobject();document.getElementById("viewoverlay").style.display='none'},2000);</script>
+	<script>setTimeout(function() {loadoptions();dynamicLoadVIEW();createCharts();parseobject();document.getElementById("viewoverlay").style.display='none'},2000);</script>
 </body>
 </html>
