--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@
 			<div class="installtext" id="installtext">INSTALL</div>
 			<div class="installclose" id="installclose"><i class="fas fa-times fa-fw"></i></div>
 		</div>
-		<div class="hamburger"  id="hamburger" onclick="togglemenu();">
+		<div class="hamburger"  id="hamburger" onclick="togglemenu();" style="display:none">
           <div class="bar1"></div>
           <div class="bar2"></div>
           <div class="bar3"></div>
