initial load opacities

--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
 		</div><!--end non-essential modals-->
 		<!--endmodal--><!-- 
 		start leftbar--><div id="xLeftbar"></div><!-- end leftbar
-		--><div id="parallax3"></div>
+		--><div id="parallax3" style="opacity:0"></div>
     <div class="menuwrapper" id="menu">
         <div class="menucontent">
             <!--<a href="#" 
@@ -512,7 +512,7 @@
     </div>
 
 
-	<div id="bodywrapper" class="">
+	<div id="bodywrapper" class="" style="opacity:0">
 
 		<div class="sharebutton" id="sharebutton" onclick="sharefunction();">
 			<i class="fas fa-share-alt fa-fw"></i>
