--- a/index.html
+++ b/index.html
@@ -72,6 +72,9 @@
 			Load file</a>
 		</div>
 		<!--startmodal-->
+		<div id="logo" style="position:fixed;width:200px;left:calc(50% - 100px);bottom:80px;font-stretch:110%;text-align:center;z-index:91;font-weight:bold;opacity:0.2;letter-spacing:10px">
+			SIMTIVA
+		</div>
 		<div id="modalInitial" class="modal">
 			<div class="modal-content" id="modalInitialcontent">
 				<div class="modal-header">Enter patient data<!--<span class="close notcondensed" onClick="hideallmodal()">&times;</span>--><img onclick="displayAbout();" src="apple-touch-icon-180x180.png" style="position:absolute;right:6px;width:44px;cursor:pointer"></div>
