update logo style

--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
 			Load file</a>
 		</div>
 		<!--startmodal-->
-		<div id="logo" style="position:fixed;width:200px;left:calc(50% - 100px);bottom:80px;font-stretch:110%;text-align:center;z-index:91;font-weight:bold;opacity:0.2;letter-spacing:10px">
-			SIMTIVA
+		<div id="logo">
+			<div style="border-bottom:1px solid #333;width:calc(50% - 100px);display:inline-block"></div><div style="width:200px;font-stretch:110%;text-align:center;font-weight:bold;opacity:0.2;letter-spacing:10px;display:inline-block;transform:translate(5px, 5px)">SIMTIVA</div><div style="border-bottom:1px solid #333;width:calc(50% - 100px);display:inline-block"></div>
 		</div>
 		<div id="modalInitial" class="modal">
 			<div class="modal-content" id="modalInitialcontent">
