--- a/index.html
+++ b/index.html
@@ -511,8 +511,9 @@
             
         </div>
         <!--end of menucontent-->
-        <div class="social"><a href="https://simtiva.blogspot.com" target="_blank" class="item"><i class="fab fa-blogger-b" style="cursor: pointer;padding-right:10px;border-right:1px solid #888" ></i><a href="https://twitter.com/simtiva_app/" target="_blank" class="item"><i class="fab fa-twitter" style="cursor: pointer;padding-left:10px" ></i></a></div>
-    </div>
+        <div class="social">
+        </div>
+    	</div>
 
 		<div class="sharebutton" id="sharebutton" onclick="sharefunction();">
 			<i class="fas fa-share-alt fa-fw"></i>
