--- a/index.html
+++ b/index.html
@@ -965,6 +965,13 @@
 		</div>
 
 		</div><!--controlpanel-->
+		<div id="cornerblock" style="">
+			<div style="" id="cornerblock2">
+				<div class="cornermessage"></div>
+				<div class="cornericon"><i class="fas fa-share-alt fa-fw"></i></div>
+				<div class="cornericon"><i class="fas fa-moon fa-fw"></i></div>
+			</div>
+		</div>
 		<div class="suspendbanner" id="suspendBanner">
 			<div style="padding-top:20px;font-weight:bold;color:white">Simulation is suspended.</div>
 		</div>
@@ -990,6 +997,7 @@
 				<li><a href="https://simtiva.blogspot.com/p/feedback.html" target="_blank">Contact</a></li>
 			</ul>
 		</div>
+
 	
 	</div><!--bodywrapper-->
 	
