--- a/index.html
+++ b/index.html
@@ -980,6 +980,9 @@
 				</div>
 			</div>
 		</div>
+		<div style="display:flex; align-items:center; justify-content:center;height:60px;color:white;opacity:0.7">
+			<div style="font-weight:bold; letter-spacing:2px; font-stretch:110%;">SimTIVA <span style="opacity:0.3">| Terence Luk 2024</span></div>
+		</div>
 	</div><!--bodywrapper-->
 	
 	<script src="main.js"></script>
