--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 	<link rel="preload" href="styles-extra.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
 	<link rel="preload" href="css/fontawesome.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'"> 
 	<link rel="preload" href="css/solid.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-	<link rel="preload" href="css/regular.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'"> 
 	<meta name="theme-color" content="#7B8092">
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 	<link rel="apple-touch-icon" href="apple-touch-icon.png" />
@@ -840,7 +839,7 @@
 							</select>
 						</td>
 					</tr>
-					<tr id="option_threshold_row" class="fr"><td>Maintenance accuracy <i class="fas fa-question tooltip background ring"><span class="tooltiptext" style="width:170px">Threshold of CPT/CET schemes. Lazy: less frequent rate changes. Accurate: more frequent changes.</span></i></td>
+					<tr id="option_threshold_row" class="fr"><td style="letter-spacing:-0.5px;font-stretch:90%">Maintenance accuracy <i class="fas fa-question tooltip background ring"><span class="tooltiptext" style="width:170px">Threshold of CPT/CET schemes. Lazy: less frequent rate changes. Accurate: more frequent changes.</span></i></td>
 						<td>
 							<select id="select_threshold">
 								<option value="0">Auto</option>
