--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 <body class="" id="windowbody">
 		<div id="rescuebuttons">
 			<a class="button frontpage"  onclick="displayModalOptions();">
-			<svg viewBox="0 0 512 512" class="iconsvg gear"><path d="M495.9 166.6c3.2 8.7 .5 18.4-6.4 24.6l-43.3 39.4c1.1 8.3 1.7 16.8 1.7 25.4s-.6 17.1-1.7 25.4l43.3 39.4c6.9 6.2 9.6 15.9 6.4 24.6c-4.4 11.9-9.7 23.3-15.8 34.3l-4.7 8.1c-6.6 11-14 21.4-22.1 31.2c-5.9 7.2-15.7 9.6-24.5 6.8l-55.7-17.7c-13.4 10.3-28.2 18.9-44 25.4l-12.5 57.1c-2 9.1-9 16.3-18.2 17.8c-13.8 2.3-28 3.5-42.5 3.5s-28.7-1.2-42.5-3.5c-9.2-1.5-16.2-8.7-18.2-17.8l-12.5-57.1c-15.8-6.5-30.6-15.1-44-25.4L83.1 425.9c-8.8 2.8-18.6 .3-24.5-6.8c-8.1-9.8-15.5-20.2-22.1-31.2l-4.7-8.1c-6.1-11-11.4-22.4-15.8-34.3c-3.2-8.7-.5-18.4 6.4-24.6l43.3-39.4C64.6 273.1 64 264.6 64 256s.6-17.1 1.7-25.4L22.4 191.2c-6.9-6.2-9.6-15.9-6.4-24.6c4.4-11.9 9.7-23.3 15.8-34.3l4.7-8.1c6.6-11 14-21.4 22.1-31.2c5.9-7.2 15.7-9.6 24.5-6.8l55.7 17.7c13.4-10.3 28.2-18.9 44-25.4l12.5-57.1c2-9.1 9-16.3 18.2-17.8C227.3 1.2 241.5 0 256 0s28.7 1.2 42.5 3.5c9.2 1.5 16.2 8.7 18.2 17.8l12.5 57.1c15.8 6.5 30.6 15.1 44 25.4l55.7-17.7c8.8-2.8 18.6-.3 24.5 6.8c8.1 9.8 15.5 20.2 22.1 31.2l4.7 8.1c6.1 11 11.4 22.4 15.8 34.3zM256 336a80 80 0 1 0 0-160 80 80 0 1 0 0 160z"/></svg>
+			<svg class="iconsvg sliders" viewBox="0 0 512 512"><path d="M0 416c0 17.7 14.3 32 32 32l54.7 0c12.3 28.3 40.5 48 73.3 48s61-19.7 73.3-48L480 448c17.7 0 32-14.3 32-32s-14.3-32-32-32l-246.7 0c-12.3-28.3-40.5-48-73.3-48s-61 19.7-73.3 48L32 384c-17.7 0-32 14.3-32 32zm128 0a32 32 0 1 1 64 0 32 32 0 1 1 -64 0zM320 256a32 32 0 1 1 64 0 32 32 0 1 1 -64 0zm32-80c-32.8 0-61 19.7-73.3 48L32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l246.7 0c12.3 28.3 40.5 48 73.3 48s61-19.7 73.3-48l54.7 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-54.7 0c-12.3-28.3-40.5-48-73.3-48zM192 128a32 32 0 1 1 0-64 32 32 0 1 1 0 64zm73.3-64C253 35.7 224.8 16 192 16s-61 19.7-73.3 48L32 64C14.3 64 0 78.3 0 96s14.3 32 32 32l86.7 0c12.3 28.3 40.5 48 73.3 48s61-19.7 73.3-48L480 128c17.7 0 32-14.3 32-32s-14.3-32-32-32L265.3 64z"/></svg>
 			Options</a>
 			<a class="button frontpage"  onclick="rescue();">
 			<svg class="iconsvg life-ring" viewBox="0 0 512 512"><path d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm173.7 119.6l-63.4 63.4c-11-18.6-26.7-34.3-45.3-45.3l63.4-63.4a218.4 218.4 0 0 1 45.3 45.3zM256 352c-53 0-96-43-96-96s43-96 96-96 96 43 96 96-43 96-96 96zM127.6 82.3l63.4 63.4c-18.6 11-34.3 26.7-45.3 45.3l-63.4-63.4a218.4 218.4 0 0 1 45.3-45.3zM82.3 384.4l63.4-63.4c11 18.6 26.7 34.3 45.3 45.3l-63.4 63.4a218.4 218.4 0 0 1 -45.3-45.3zm302.1 45.3l-63.4-63.4c18.6-11 34.3-26.7 45.3-45.3l63.4 63.4a218.4 218.4 0 0 1 -45.3 45.3z"/></svg>
@@ -481,14 +481,12 @@
 		--><div id="parallax3" style="opacity:0"></div>
     <div class="menuwrapper" id="menu">
         <div class="menucontent">
-            <a href="#" onclick="displayAbout2(0); togglemenu();">About</a>
-            <a href="#" onclick="displayAbout2(); togglemenu();" >Help</a>
-            <a href="#" onclick="setmodal('modalReset'); togglemenu();">Reload</a>
-            <a href="#" onclick="setmodal('modalDocumentation'); togglemenu();">Documentation</a>
-            <a href="#" onclick="sharefunction(); togglemenu();">Share</a>
-            <a href="https://simtiva.blogspot.com/p/feedback.html" target="_blank" 
-            onclick="togglemenu();" 
-            >Blog/Contact</a>            
+            <a href="#" onclick="displayAbout2(0); togglemenu();"><i class="fas fa-info-circle"></i>About</a>
+            <a href="#" onclick="displayAbout2(); togglemenu();" ><i class="fas fa-question-circle"></i>Help</a>
+            <a href="#" onclick="setmodal('modalReset'); togglemenu();"><i class="fas fa-sync-alt"></i>Reload</a>
+            <a href="#" onclick="setmodal('modalDocumentation'); togglemenu();"><i class="fas fa-book"></i>Documentation</a>
+            <a href="#" onclick="sharefunction(); togglemenu();"><i class="fas fa-share-alt"></i>Share</a>
+            <a href="https://simtiva.blogspot.com/p/feedback.html" target="_blank" onclick="togglemenu();" ><i class="fas fa-comments"></i>Blog/Contact</a>            
         </div>
         <!--end of menucontent-->
         <div class="social">
@@ -762,7 +760,7 @@
 					<div id="chartoverlayoptionscontentarrow"></div>
 				</div>
 				<div id="annotatebutton" style="display:none" onclick="setnow(Math.floor(time_in_s));document.getElementById('modalAnnotatetitle').innerHTML='ADD EVENT';document.getElementById('addeventtext').value='';document.getElementById('btn_submitevent').setAttribute('onclick','createEvent2(-1)');document.getElementById('btn_deleteevent').style.display='none';setmodal('modalAnnotate')">
-					<i class="fas fa-pen"></i>
+					<i class="fas fa-pencil-alt"></i>
 				</div>
 				<div id="expandbutton" style="display:none" onclick="openpopupchart();">
 					<i class="fas fa-expand-alt"></i>
@@ -961,7 +959,7 @@
 			</div>
 		</div>
 		<div id="logo2" style="">
-			<div style="font-weight:bold; letter-spacing:2px; font-stretch:110%;">SimTIVA <span style="opacity:0.3">| Terence Luk 2024</span></div>
+			<div style="font-weight:bold; letter-spacing:2px; font-stretch:110%; text-shadow:1px 1px 2px #0005">SimTIVA <span style="opacity:0.3">| Terence Luk 2024</span></div>
 		</div>
 	</div><!--bodywrapper-->
 	
