--- a/view.html
+++ b/view.html
@@ -1270,45 +1270,16 @@
 		</div>
 
 		</div><!--controlpanel-->
-		<div class="footer">
-			<b>SIMTiva</b>&nbsp;|&nbsp;Terence Luk 2024
-			<ul>
-				<li><a href="#" onclick="setmodal('modalAbout');">About</a></li>
-				<li><a href="https://simtiva.blogspot.com/" target="_blank">Blog</a></li>
-				<li><a href="https://simtiva.blogspot.com/p/readme.html" target="_blank">Readme</a></li>
-				<li><a href="https://simtiva.blogspot.com/p/feedback.html" target="_blank">Contact</a></li>
-			</ul>
+		<div id="cornerblock" style="">
+			<div style="" id="cornerblock2">
+				<div id="cornermessage"></div>
+				<div class="cornericon" id="sharebutton" onclick="sharefunction()"><i class="fas fa-share-alt fa-fw"></i></div>
+				<div class="cornericon" id="darkmodebutton" onclick="goDark();"><i class="fas fa-moon fa-fw"></i></div>
+			</div>
 		</div>
-		<!--
-		<div class="ticker" id="ticker">
-				<div id="progressoutside">
-					<div id="progressbar">
-						<div id="progressinside"></div>
-					</div>
-				</div>
-				<div class="tickerleft" id="tickerleft">
-					<div class="A1">
-							<div class="A2">Next bolus:</div>
-							<div class="A3"><span id="PP_bolus_display"></span>mg</div>
-					</div>
-					<div class="B1">
-						<div class="B2">in</div>
-						<div class="B3"><span id="PP_time_display">_</span></div>
-					</div>
-				</div>
-				<div class="tickerright">
-					<div class="A1">
-							<div class="A2">Last bolus: </div>
-						<div class="A3"><span id="PP_lastbolus_display"></span>mg</div>
-					</div>
-					<div class="B1">
-						<div class="B2">at</div>
-						<div class="B3"><span id="PP_lasttime_display">_</span></div>
-					</div>		
-				</div>
+		<div id="logo2" style="">
+			<div style="font-weight:bold; letter-spacing:2px; font-stretch:110%; text-shadow:1px 1px 2px #0005">SimTIVA <span style="opacity:0.3">| Terence Luk 2024</span></div>
 		</div>
-		-->
-	
 	</div><!--bodywrapper-->
 	
 	<script src="main.js"></script>
