final finishing touches

--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
             <a href="#" onclick="setmodal('modalReset'); togglemenu();"><i class="fas fa-sync-alt"></i>Reload</a>
             <a href="#" onclick="setmodal('modalDocumentation'); togglemenu();"><i class="fas fa-book"></i>Documentation</a>
             <a href="#" onclick="sharefunction(); togglemenu();"><i class="fas fa-share-alt"></i>Share</a>
-            <a href="https://simtiva.blogspot.com/p/feedback.html" target="_blank" onclick="togglemenu();" ><i class="fas fa-comments"></i>Blog/Contact</a>            
+            <a href="https://simtiva.blogspot.com/p/feedback.html" target="_blank" onclick="togglemenu();" ><i class="fas fa-comments"></i>Contact</a>            
         </div>
         <!--end of menucontent-->
         <div class="social">
