--- a/index.html
+++ b/index.html
@@ -528,7 +528,7 @@
 
 
 		
-		<div id="popupchartdiv" style="display: none;position:fixed;background:black;top:0;left:0;z-index:96;width:100%;height:100%;padding:0">
+		<div id="popupchartdiv" style="">
 
 			<!--start numpad -->
 			<div id="numpadContainer">
