--- a/index.html
+++ b/index.html
@@ -841,6 +841,9 @@ function hideInstallPromotion() {
 	document.getElementById("installbutton").classList.remove("show");
 }
 
+//triggers dynamic load with 3s delay
+document.getElementById("windowbody").style.overflowY = "hidden";
+
 	</script>
 	<!-- chart.js from https://cdnjs.com/libraries/Chart.js-->
 	<script src="chart.min.js" defer></script>
