--- a/view.html
+++ b/view.html
@@ -329,8 +329,6 @@
 
 
 	<div id="bodywrapper" class="">
-
-
 		<div class="installbutton" id="installbutton">
 			<i class="fas fa-download fa-fw" style="transform: translateY(2px);"></i>
 			<div class="installtext" id="installtext">INSTALL</div>
@@ -538,6 +536,7 @@
 			</div>
 
 			<div class="cardscontainer">
+			<div id="xInputCards">
 				<!--<button onclick="openpopupchart()">POPUP</button>-->
 			<!-- start cards container for layout-->
 			<div class="card" id="card_infusion0"  style="display:none;">
@@ -992,6 +991,7 @@
 			<div class="cardtitle">MODEL PARAMETERS</div>
 			<div class="cardcontents"><span id="modeldescription"></span></div>
 		</div>
+	</div><div id="xCards">
 		<div class="card" id="schemecopy">
 			<div class="cardtitle" id="schemecopytitle">SCHEME</div>
 			<div class="cardcontents" id="schemecopycontainer">
@@ -1259,6 +1259,7 @@
 				-->
 			</div>
 		</div>
+		</div><!--end xCards-->
 		</div><!--end cards container layout-->
 		<div class="bottomcard">
 			<h1>SimTIVA is a computer simulation program to simulate delivery of total intravenous anaesthesia (TIVA) using a target-controlled infusion (TCI) pump. This progressive web app (PWA) is designed for use on smartphones, tablets and computers.</h1>
