dealing with complex mode performance problems
complex mode minor fixes

--- a/index.html
+++ b/index.html
@@ -673,7 +673,7 @@
 			</div>
 		</div>
 
-		<div id="controlpanel">
+		<div id="controlpanel" style="min-height:90vh">
 			<div id="prompts_container">
 				<div class="prompts_card" id="warning" style="border-color:#e4c4c4">
 					<div class="prompts_close" onclick="hide_prompts(this.parentElement); user_hide = 1; userhide();"><i class="fas fa-times-circle"></i></div>
