--- a/index.html
+++ b/index.html
@@ -481,12 +481,12 @@
 		--><div id="parallax3" style="opacity:0"></div>
     <div class="menuwrapper" id="menu">
         <div class="menucontent">
-            <a href="#" onclick="displayAbout2(0); togglemenu();"><i class="fas fa-info-circle"></i>About</a>
-            <a href="#" onclick="displayAbout2(); togglemenu();" ><i class="fas fa-question-circle"></i>Help</a>
-            <a href="#" onclick="setmodal('modalReset'); togglemenu();"><i class="fas fa-sync-alt"></i>Reload</a>
-            <a href="#" onclick="setmodal('modalDocumentation'); togglemenu();"><i class="fas fa-book"></i>Documentation</a>
-            <a href="#" onclick="sharefunction(); togglemenu();"><i class="fas fa-share-alt"></i>Share</a>
-            <a href="https://simtiva.blogspot.com/p/feedback.html" target="_blank" onclick="togglemenu();" ><i class="fas fa-comments"></i>Contact</a>            
+            <a href="#" onclick="displayAbout2(0); togglemenu();">About</a>
+            <a href="#" onclick="displayAbout2(); togglemenu();" >Help</a>
+            <a href="#" onclick="setmodal('modalReset'); togglemenu();">Reload</a>
+            <a href="#" onclick="setmodal('modalDocumentation'); togglemenu();">Documentation</a>
+            <a href="#" onclick="sharefunction(); togglemenu();">Share</a>
+            <a href="https://simtiva.blogspot.com/p/feedback.html" target="_blank" onclick="togglemenu();" >Contact</a>            
         </div>
         <!--end of menucontent-->
         <div class="social">
