--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <meta name="keywords" content="simtiva, tiva, tci, free, simulator, calculator, terence, luk, propofol, remifentanil, alfentanil, app, smartphones, apple, android">
     <meta name="author" content="Terence Luk">
     <title>SimTIVA | Free TIVA Simulation App to Simulate Target-Controlled Infusion | Simple TCI Calculator</title>
-<script defer src="https://cloud.umami.is/script.js" data-website-id="fe14ba98-f4c0-4536-94fa-9a0a4c1ed75e"></script>
+<!--<script defer src="https://cloud.umami.is/script.js" data-website-id="fe14ba98-f4c0-4536-94fa-9a0a4c1ed75e"></script>-->
 </head>
 <body class="" id="windowbody">
 		<div id="rescuebuttons">
@@ -314,6 +314,7 @@
 							</table>
 							<div style="width:100%;text-align:left">
 								<a class="button invert wide" style="padding-right:0" id="page2proceed">Proceed</a>
+								<a class="button" onclick="RSI_start()" id="page2RSI" style="display:none">RSI mode</a>
 								<a class="button muted right" onclick="pageTwoFunction();">Back</a>
 								
 							</div>
