--- a/index.html
+++ b/index.html
@@ -608,7 +608,12 @@
 					<div id="chartinfoleft" onclick="togglePopupInfo();"><i class="fas fa-chevron-circle-right fa-fw"></i></div><!--
 					--><div id="chartinforight">
 						<div id="chartinfotime"><span id="timecopy" class="timespan">0m 0s</span></div>
-						<div id="chartinfodrugline1"><span id="drugnamecopy">DRUG</span><span id="modelnamecopy"></span><span id="conccopy">(_mg/ml)</span></div>
+						<div id="chartinfodrugline1">
+							<div id="drugnamecopy">DRUG</div>
+							<div>
+								<span id="modelnamecopy"></span><span id="conccopy">(_mg/ml)</span>
+							</div>
+						</div>
 						<div id="chartinfodrugline2">Awaiting input</div>
 						<div id="chartinfoscheme"><span id="nextratedescriptor">Rate info unavailable </span><span id="nextratecopy"></span><span id="nextratepreposition"></span><span id="timeremaincopy"></span></div>
 						<div id="chartinfoptol">PTOL: __</div>
