--- a/index.html
+++ b/index.html
@@ -604,8 +604,8 @@
 
 			<!--end numpad -->
 
-				<div id="chartinfooverlay" class="">
-					<div id="chartinfoleft" onclick="togglePopupInfo();"><i class="fas fa-chevron-circle-right fa-fw"></i></div><!--
+				<div id="chartinfooverlay" class="open">
+					<div id="chartinfoleft" data-after="HIDE" onclick="togglePopupInfo();"><i class="fas fa-chevron-circle-right fa-fw"></i></div><!--
 					--><div id="chartinforight">
 						<div id="chartinfotime"><span id="timecopy" class="timespan">0m 0s</span></div>
 						<div id="chartinfodrugline1">
