--- a/view.html
+++ b/view.html
@@ -432,11 +432,16 @@
 					<a id="chartzoomout2" onclick="chartZoomToggle(0);"><i class="fas fa-search-minus"></i></a>
 				</div>
 				-->
-				<div id="chartinfooverlay" class="">
-					<div id="chartinfoleft" onclick="togglePopupInfo();"><i class="fas fa-chevron-circle-right fa-fw"></i></div><!--
+				<div id="chartinfooverlay" class="open">
+					<div id="chartinfoleft" data-after="HIDE" onclick="togglePopupInfo();"><i class="fas fa-chevron-circle-right fa-fw"></i></div><!--
 					--><div id="chartinforight">
 						<div id="chartinfotime"><span id="timecopy" class="timespan">0m 0s</span></div>
-						<div id="chartinfodrugline1"><span id="drugnamecopy">DRUG</span><span id="modelnamecopy"></span><span id="conccopy">(_mg/ml)</span></div>
+						<div id="chartinfodrugline1">
+							<div id="drugnamecopy">DRUG</div>
+							<div>
+								<span id="modelnamecopy"></span><span id="conccopy">(_mg/ml)</span>
+							</div>
+						</div>
 						<div id="chartinfodrugline2">Awaiting input</div>
 						<div id="chartinfoscheme"><span id="nextratedescriptor">Rate info unavailable </span><span id="nextratecopy"></span><span id="nextratepreposition"></span><span id="timeremaincopy"></span></div>
 						<div id="chartinfoptol">PTOL: __</div>
@@ -445,13 +450,33 @@
 				<div id="chartoverlayoptions2" >
 					<div id="chartoverlayoptions2content">
 						<div id="closeoptions2" onclick="togglepopupoptions();">&times;</div>
-						<div id="" style="font-weight:bold; margin-top:6px; margin-bottom:7px">Chart Options</div>
 						<div id="chartoptionscheckbox2">
-				      <label class="container labeloptionscontainer" style="">Automatic time scale
-				          <input type="checkbox" id="isTimeAutomatic2" onChange="toggleautotime();" checked><span class="checkmark"></span>
-				      </label>
+					      <label class="container labeloptionscontainer" style="margin-top:6px; max-width:70%">Auto. concentration scale (y-axis)
+					          <input type="checkbox" onChange="toggleautoconc()" id="isConcAutomatic2" checked><span class="checkmark"></span>
+					      </label>
+					      <div style="padding-left:32px">
+					      	Custom max concentration:
+					      	<select id="customconcselect2" style="" onChange="setcustomconc(this.value)">
+					      	<option value="15">15mcg/ml</option>
+					      	<option value="14">14mcg/ml</option>
+					      	<option value="13">13mcg/ml</option>
+					      	<option value="12">12mcg/ml</option>
+					      	<option value="11">11mcg/ml</option>
+					      	<option value="10" selected>10mcg/ml</option>
+					      	<option value="9">9mcg/ml</option>
+					      	<option value="8">8mcg/ml</option>
+					      	<option value="7">7mcg/ml</option>
+					      	<option value="6">6mcg/ml</option>
+					      	<option value="5">5mcg/ml</option>
+					      	<option value="4">4mcg/ml</option>
+					      	<option value="3">3mcg/ml</option>
+					      	</select>
+					      </div>
+					      <label class="container labeloptionscontainer" style="">Auto. time scale (x-axis)
+					          <input type="checkbox" id="isTimeAutomatic2" onChange="toggleautotime();" checked><span class="checkmark"></span>
+					      </label>
 						</div>
-						<div style="padding-left:30px">Custom time range (min):</div>
+						<div style="padding-left:32px">Custom time range (min):</div>
 						<div id="timerangeslider2">
 							<div id="leftslidercontainer2">
 								<input id="range0copy" value="10" min="0" max="30" step="5" type="range" oninput="processrange(0);">
@@ -466,7 +491,7 @@
 				      <label class="container labeloptionscontainer" style="margin-bottom:0px">PD Effect estimation
 				          <input type="checkbox" id="isEffectEstimationOn2" onChange="if (document.getElementById('isEffectEstimationOn').checked == true) {document.getElementById('isEffectEstimationOn').checked = false} else {document.getElementById('isEffectEstimationOn').checked = true;}toggleEffectEst();" checked><span class="checkmark"></span>
 				      </label>
-				      <select id="select_effect_measure2" style="margin-left:30px;width:calc(100% - 30px)" onChange="document.getElementById('select_effect_measure').value=document.getElementById('select_effect_measure2').value;toggleEffectEst();">
+				      <select id="select_effect_measure2" style="margin-left:32px;width:calc(100% - 30px)" onChange="document.getElementById('select_effect_measure').value=document.getElementById('select_effect_measure2').value;toggleEffectEst();">
 				      	<option value="bis">BIS 40-60</option>
 				      	<option value="ptol">PTOL 50-90</option>
 				      	<option value="nsri">NSRI 20-50</option>
@@ -820,12 +845,32 @@
 				<div id="chartoverlayoptions">
 					<div id="chartoverlayoptionscontent">
 						<div id="closeoptions" onclick="chartOptionsToggle();">&times;</div>
-						<div id="" style="font-weight:bold; margin-top:6px; margin-bottom:9px">Chart Options</div>
 						<div id="chartoptionscheckbox">
-				      <label class="container labeloptionscontainer" style="">Display events
+				      <label class="container labeloptionscontainer" style="margin-top:10px;width:60%">Display events
 				          <input type="checkbox" onChange="toggleshowevents();" id="isShowEvents" checked><span class="checkmark"></span>
 				      </label>
-				      <label class="container labeloptionscontainer" style="">Automatic time scale
+				      <label class="container labeloptionscontainer" style="margin-top:6px">Auto. concentration scale (y-axis)
+				          <input type="checkbox" onChange="toggleautoconc()" id="isConcAutomatic" checked><span class="checkmark"></span>
+				      </label>
+				      <div style="padding-left:30px">
+				      	Custom max concentration:
+				      	<select id="customconcselect" style="" onChange="setcustomconc(this.value)">
+				      	<option value="15">15mcg/ml</option>
+				      	<option value="14">14mcg/ml</option>
+				      	<option value="13">13mcg/ml</option>
+				      	<option value="12">12mcg/ml</option>
+				      	<option value="11">11mcg/ml</option>
+				      	<option value="10" selected>10mcg/ml</option>
+				      	<option value="9">9mcg/ml</option>
+				      	<option value="8">8mcg/ml</option>
+				      	<option value="7">7mcg/ml</option>
+				      	<option value="6">6mcg/ml</option>
+				      	<option value="5">5mcg/ml</option>
+				      	<option value="4">4mcg/ml</option>
+				      	<option value="3">3mcg/ml</option>
+				      	</select>
+				      </div>
+				      <label class="container labeloptionscontainer" style="margin-top:6px">Auto. time scale (x-axis)
 				          <input type="checkbox" id="isTimeAutomatic" onChange="toggleautotime();" checked><span class="checkmark"></span>
 				      </label>
 						</div>
@@ -841,7 +886,7 @@
 							</div>		
 						</div>
 						<div style="margin-top:30px" id="PD_options_group">
-				      <label class="container labeloptionscontainer" style="">PD Effect estimation
+				      <label class="container labeloptionscontainer" style="margin-bottom:0px">PD Effect estimation
 				          <input type="checkbox" id="isEffectEstimationOn" onChange="toggleEffectEst();" checked><span class="checkmark"></span>
 				      </label>
 				      <select id="select_effect_measure" style="margin-left:30px;width:calc(100% - 30px)" onChange="toggleEffectEst();">
